--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.3.4",
-    "node-sass": "^7.0.1",
+    "node-sass": "^9.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "react-tooltip": "^4.2.21",
+    "sass": "^1.77.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
